# bookshelf

./: README.md  alembic.ini  pyproject.toml
src/: main.py
src/api/routers/: wishlist.py
src/api/schemas/: wishlist.py
src/core/: dev.env  settings.py
src/core/db/: config.py  metadata.py
src/core/events/: shutdown.py  startup.py
src/data/migrations/: env.py
src/data/migrations/versions/: 0ec399b44b1a_create_wishlist_table.py
src/data/models/: wishlist.py
