[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["dstepanov <StepanovDA89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
