[tool.poetry]
name = "bookshelf"
version = "0.1.0"
description = ""
authors = ["dstepanov <StepanovDA89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
asyncpg = "^0.24.0"
SQLAlchemy = {extras = ["asyncpg"], version = "^1.4.25"}
alembic = "^1.7.3"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
